2001-06-18 14:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/class_tp.txt
  * include/hbrddcdx.h
  * include/hbrdddel.h
  * source/rtl/gt_tpl/gt_tpl.c
  * source/rtl/gt_tpl/mousetpl.c
  * source/rtl/gtdos/gtdos.c
  * source/rtl/gtwin/mousewin.c
  * tests/setkeys.prg
    * Updated from the old Harbour Exception to the new Harbour Exception
      either with permission from the various copyright holders or because
      the author is anonymous.

2001-06-18 14:10 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * contrib/libmisc/stringp.prg
  * source/rtl/accept.c
  * source/rtl/objfunc.prg
  * source/rtl/run.c
  * source/rtl/transfrm.c
  * source/vm/debug.c
  * source/vm/pvalue.c
  * source/vm/runner.c
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Eddie Runia <eddie@runia.com>.

2001-06-18 14:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * include/hbdbf.h
  * include/hbdbsort.h
  * include/hbrdddbf.h
  * include/hbrddsdf.h
  * include/hbrddwrk.h
  * source/rdd/dbcmd.c
  * source/rdd/dbf0.prg
  * source/rdd/dbf1.c
  * source/rdd/dbsort.prg
  * source/rdd/delim0.prg
  * source/rdd/delim1.c
  * source/rdd/hbdbsort.c
  * source/rdd/rddsys.prg
  * source/rdd/sdf0.prg
  * source/rdd/sdf1.c
  * source/rdd/workarea.c
  * source/rdd/dbfcdx/dbfcdx0.prg
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfcdx/dbfcdx1.h
  * source/rdd/dbfcdx/dbfcdx2.h
  * source/rdd/dbfntx/dbfntx0.prg
  * source/rdd/dbfntx/dbfntx1.c
  * source/rdd/nulsys/nulsys.prg
    * Updated from the old Harbour Exception to the new Harbour Exception
      with permission from Bruno Cantero <bruno@issnet.net>.

2001-06-18 15:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/dbfntx/dbfntx1.c
     ! Bug fixed, related to Bof, Eof flags after seeking
     ! Seek "" works now as in CA-Clipper
     * Added processing of DBOI_NAME to ntxOrderInfo, so Ordname() works now.

2001-06-17 22:50 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>