@@ -1,3 +1,10 @@
+2001-06-18 23:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+   * source/rdd/dbf1.c
+   * source/rdd/dbfntx/dbfntx1.c
+     ! Fixed bugs with record appending, reported by John M. S. Chiang
+     ! ntxOrderListFocus() corrected
+
+
 2001-06-18 14:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>
 
   * doc/class_tp.txt
